[gd_scene load_steps=2 format=3 uid="uid://dpys7m6fn72vo"]

[ext_resource type="Script" path="res://UI/control.gd" id="1_2vw0c"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vw0c")

[node name="Lobby" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="JoinTeam1" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 421.0
offset_top = 416.0
offset_right = 619.0
offset_bottom = 473.0
text = "Join"

[node name="JoinTeam2" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 760.0
offset_top = 423.0
offset_right = 953.0
offset_bottom = 475.0
text = "Join"

[node name="Start" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 51.0
offset_top = 421.0
offset_right = 216.0
offset_bottom = 477.0
text = "Start"

[node name="Players" type="Panel" parent="Lobby"]
layout_mode = 0
offset_left = 47.0
offset_top = 135.0
offset_right = 222.0
offset_bottom = 416.0

[node name="Label" type="Label" parent="Lobby/Players"]
layout_mode = 0
offset_left = -17.0
offset_top = -5.0
offset_right = 196.0
offset_bottom = 32.0
text = "Players (0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerListLabel" type="RichTextLabel" parent="Lobby/Players"]
layout_mode = 0
offset_left = 2.0
offset_top = 35.0
offset_right = 173.0
offset_bottom = 280.0

[node name="Players2" type="Panel" parent="Lobby"]
layout_mode = 0
offset_left = 422.0
offset_top = 131.0
offset_right = 618.0
offset_bottom = 412.0

[node name="Label" type="Label" parent="Lobby/Players2"]
layout_mode = 0
offset_left = -10.0
offset_top = -3.0
offset_right = 203.0
offset_bottom = 34.0
text = "Team 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Team1Label" type="RichTextLabel" parent="Lobby/Players2"]
layout_mode = 0
offset_left = -1.0
offset_top = 34.0
offset_right = 196.0
offset_bottom = 279.0

[node name="Players3" type="Panel" parent="Lobby"]
layout_mode = 0
offset_left = 758.0
offset_top = 130.0
offset_right = 954.0
offset_bottom = 411.0
scale = Vector2(1.01026, 1.02878)

[node name="Label" type="Label" parent="Lobby/Players3"]
layout_mode = 0
offset_left = -10.0
offset_top = -3.0
offset_right = 203.0
offset_bottom = 34.0
text = "Team 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Team2Label" type="RichTextLabel" parent="Lobby/Players3"]
layout_mode = 0
offset_left = -1.0
offset_top = 34.0
offset_right = 196.0
offset_bottom = 279.0

[node name="LineEdit" type="LineEdit" parent="Lobby"]
layout_mode = 0
offset_left = 225.0
offset_top = 19.0
offset_right = 439.0
offset_bottom = 50.0
placeholder_text = "Lobby Name"

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="Main"]
layout_mode = 0
offset_left = 51.0
offset_top = 69.0
offset_right = 222.0
offset_bottom = 135.0
text = "Host"

[node name="Client" type="Button" parent="Main"]
layout_mode = 0
offset_left = 251.0
offset_top = 70.0
offset_right = 422.0
offset_bottom = 136.0
text = "Join"

[connection signal="pressed" from="Main/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Main/Client" to="." method="_on_client_pressed"]
